--- a/app/src/main/res/layout/fragment_simple_song_list.xml
+++ b/app/src/main/res/layout/fragment_simple_song_list.xml
@@ -10,7 +10,6 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -34,7 +33,8 @@
             android:id="@+id/songView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="40dp" />
+            android:paddingBottom="40dp"
+            android:visibility="gone" />
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
