--- a/app/src/main/res/layout/fragment_songs_main__base.xml
+++ b/app/src/main/res/layout/fragment_songs_main__base.xml
@@ -213,7 +213,7 @@
             android:background="@drawable/upper_rounded_corners"
             android:backgroundTintMode="add"
             android:clipToOutline="true"
-            android:elevation="2dp"
+            android:elevation="50dp"
             app:behavior_peekHeight="auto"
             app:layout_behavior="@string/bottom_sheet_behavior">
 
@@ -222,6 +222,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:background="#E4BFB3"
+                android:backgroundTint="#5C000000"
+                android:backgroundTintMode="src_over"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -235,6 +237,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:alpha="0.4"
+                    android:clickable="true"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -288,6 +291,7 @@
                     android:id="@+id/expanded_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
                     android:gravity="center"
                     android:text="No song playing"
                     android:textSize="16sp"
@@ -302,7 +306,9 @@
                 android:id="@+id/scene1"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:background="#E4BFB3"
+                android:background="@drawable/gradient2"
+                android:backgroundTint="#66D9D6D6"
+                android:backgroundTintMode="add"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -368,7 +374,9 @@
                     android:scrollHorizontally="true"
                     android:singleLine="true"
                     android:text="No song playing"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
+                    android:textFontWeight="600"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="@+id/bottomSheetCollapsedImage"
                     app:layout_constraintEnd_toStartOf="@+id/bottomSheetCollapsedToggle"
                     app:layout_constraintStart_toEndOf="@+id/bottomSheetCollapsedImage"
@@ -401,8 +409,11 @@
                     android:layout_height="40dp"
                     android:background="@drawable/blank"
                     android:button="@drawable/play_pause_button_music_player_toggle"
+                    android:checked="false"
                     android:clickable="false"
                     android:enabled="false"
+                    android:scaleX="1.5"
+                    android:scaleY="1.5"
                     app:layout_constraintBottom_toBottomOf="@+id/serviceColorCode"
                     app:layout_constraintEnd_toStartOf="@+id/bottomSheetCollapsedfindInPlaylists"
                     app:layout_constraintHorizontal_bias="1.0"
