--- a/app/src/main/res/layout/playlist_example.xml
+++ b/app/src/main/res/layout/playlist_example.xml
@@ -18,13 +18,11 @@
         android:singleLine="true"
         android:text="Titluandreinowuacumamdajndsakdknsajdnsajkdnsajkdb"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/songOptions"
-        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toEndOf="@+id/thumbnail"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.187" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/thumbnail"
@@ -38,22 +36,6 @@
         app:layout_constraintStart_toEndOf="@+id/movementHandle"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5" />
-
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:singleLine="true"
-        android:text="Author"
-        android:textColor="#C8C8C8"
-        android:textSize="13sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/songOptions"
-        app:layout_constraintHorizontal_bias="0.314"
-        app:layout_constraintStart_toEndOf="@+id/thumbnail"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintVertical_bias="0.26" />
 
     <ImageView
         android:id="@+id/songOptions"
