--- a/app/src/main/res/layout/fragment_playlist__viewing.xml
+++ b/app/src/main/res/layout/fragment_playlist__viewing.xml
@@ -9,10 +9,10 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
-
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:background="@color/transparent"
+        android:stateListAnimator="@animator/appbarlayout_not_animated"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,27 +23,26 @@
             android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/backgrounds"
             app:collapsedTitleTextColor="@color/white"
             app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
             app:expandedTitleTextColor="@color/white"
             app:layout_collapseMode="parallax"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:title="Playlistname"
             app:titleCollapseMode="scale"
+            app:titleEnabled="true"
             app:toolbarId="@+id/toolbar">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/stickyToolbar3"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@color/backgrounds"
                 android:overScrollMode="never"
                 app:collapseIcon="@drawable/baseline_access_time_24"
                 app:layout_collapseMode="pin"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:title="Playlist" />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constr"
@@ -56,8 +55,6 @@
                     android:id="@+id/plusButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:background="@drawable/ripple_circle"
-                    android:backgroundTint="@color/backgrounds"
                     android:clickable="true"
                     android:padding="5dp"
                     android:scaleType="center"
@@ -71,8 +68,6 @@
                     android:id="@+id/optionsButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:background="@drawable/ripple_circle"
-                    android:backgroundTint="@color/backgrounds"
                     android:clickable="true"
                     android:padding="5dp"
                     android:scaleType="center"
@@ -88,6 +83,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
