--- a/app/src/main/res/layout/fragment_songs_main__base.xml
+++ b/app/src/main/res/layout/fragment_songs_main__base.xml
@@ -192,6 +192,7 @@
             android:layout_height="match_parent"
             android:accessibilityHeading="true"
             android:accessibilityLiveRegion="polite"
+            android:paddingBottom="40dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
