--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,8 @@
     <color name="invertedLiftedBackgrounds">#A8A8A8</color>
 
     <color name="flash_glow_for_items">#7EFFFFFF</color>
-
+    <color name="ConfirmTint">#274FE015</color>
+    <color name="DeleteTint">#49F80404</color>
 
 
 
