--- a/app/src/main/res/drawable/ripple_circle_white.xml
+++ b/app/src/main/res/drawable/ripple_circle_white.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#595959">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
 
     <item>
-        <shape>
-            <corners android:radius="500dp"/>
-        </shape>
+        <ripple
+            android:color="#34D3D3D3" >
+            <!-- Add a mask (optional but recommended) -->
+            <item android:id="@android:id/mask">
+                <color android:color="#87AF1818" /> <!-- Color doesn't matter; only bounds -->
+            </item>
+        </ripple>
     </item>
-</ripple>
+</layer-list>
