Everything works. Service, notification actions, even added circular_vector drawable for refference and the radiobutton_button.xml

--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -10,6 +10,7 @@
         android:id="@+id/bottomsheet_FragmentContainer"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -46,7 +47,6 @@
                 android:background="#E4BFB3"
                 android:backgroundTint="#5C000000"
                 android:backgroundTintMode="src_over"
-                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -116,6 +116,7 @@
                     android:enabled="false"
                     android:gravity="center"
                     android:text="No song playing"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toTopOf="@+id/expanded_play_pause"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -131,6 +132,7 @@
                 android:background="@drawable/gradient2"
                 android:backgroundTint="#66D9D6D6"
                 android:backgroundTintMode="add"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
