--- a/app/src/main/res/layout/fragment_playlist__viewing.xml
+++ b/app/src/main/res/layout/fragment_playlist__viewing.xml
@@ -58,13 +58,13 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_gravity="center|end"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="100dp"
+                    android:layout_marginBottom="60dp"
                     android:clipToOutline="true"
                     android:scaleType="fitCenter"
                     app:layout_collapseMode="none"
-                    app:layout_constraintBottom_toTopOf="@+id/plusButton"
-                    app:layout_constraintEnd_toStartOf="@+id/plusButton"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="@+id/guideline5"
                     app:layout_constraintTop_toTopOf="parent"
