--- a/app/src/main/res/drawable/checkbox_round_button.xml
+++ b/app/src/main/res/drawable/checkbox_round_button.xml
@@ -12,6 +12,7 @@
             <!-- Checkmark -->
             <item>
                 <vector
+                    android:name="path"
                     android:width="24dp"
                     android:height="24dp"
                     android:viewportWidth="24"
@@ -19,8 +20,9 @@
                     <path
                         android:fillColor="@color/blue"
                         android:strokeColor="@color/white"
+                        android:strokeLineCap="round"
                         android:strokeWidth="2"
-                        android:pathData="M6,12 L10,16 L18,8" />
+                        android:pathData="M6,12 L9,16 Q10,17 11,16 L18,8" />
                 </vector>
             </item>
         </layer-list>
