--- a/app/src/main/res/drawable/indian_pause_vector.xml
+++ b/app/src/main/res/drawable/indian_pause_vector.xml
@@ -16,11 +16,12 @@
 
 <!-- I will be using this for a non-proffit app/-->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
+        android:name="path"
         android:fillColor="@color/white"
-        android:pathData="M8 19c1.1 0 2-0.9 2-2V7c0-1.1-0.9-2-2-2s-2 0.9-2 2v10c0 1.1 0.9 2 2 2zm6-12v10c0 1.1 0.9 2 2 2s2-0.9 2-2V7c0-1.1-0.9-2-2-2s-2 0.9-2 2z" />
+        android:pathData="M 8 5 C 6.9 5 6 5.9 6 7 L 6 17 C 6 18.1 6.9 19 8 19 C 8 19 8 19 8 19 C 9.1 19 10 18.1 10 17 C 10 15.889 10 14.778 10 13.667 L 10 10.333 C 10 9.222 10 8.111 10 7 C 10 5.9 9.1 5 8 5 M 14 7 C 14 5.9 14.9 5 16 5 C 17.1 5 18 5.9 18 7 L 18 17 C 18 18.1 17.1 19 16 19 C 14.9 19 14 18.1 14 17 L 14 7 L 14 7" />
 </vector>
