--- a/app/src/main/res/drawable/indian_play_vector.xml
+++ b/app/src/main/res/drawable/indian_play_vector.xml
@@ -16,12 +16,13 @@
 <!-- I will be using this for a non-proffit app/-->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
 
     <path
+        android:name="path"
         android:fillColor="@color/white"
-        android:pathData="M8 6.82v10.36c0 0.79 0.87 1.27 1.54 0.84 l8.14-5.18c0.62-0.39 0.62 -1.29 0-1.69L9.54 5.98C8.87 5.55 8 6.03 8 6.82z" />
+        android:pathData="M 8 6.82 C 8 7.971 8 9.122 8 10.273 L 8 13.727 C 8 14.878 8 16.029 8 17.18 C 8 17.97 8.87 18.45 9.54 18.02 C 12.253 16.293 14.967 14.567 17.68 12.84 C 18.3 12.45 18.3 11.55 17.68 11.15 L 9.54 5.98 C 8.87 5.55 8 6.03 8 6.82 C 8 6.82 8 6.82 8 6.82 M 16 12 C 16 12 16 12 16 12 C 16 12 16 12 16 12 L 16 12 C 16 12 16 12 16 12 C 16 12 16 12 16 12 L 16 12 L 16 12" />
 </vector>
