--- a/app/src/main/res/layout/fragment_music__app__settings.xml
+++ b/app/src/main/res/layout/fragment_music__app__settings.xml
@@ -131,19 +131,24 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView5">
 
-                    <RadioButton
+                    <com.google.android.material.radiobutton.MaterialRadioButton
                         android:id="@+id/radioButton"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Vertical" />
+                        android:button="@drawable/radiobutton_button"
+                        android:text="Vertical"
+                        android:textColor="@color/white"
+                        android:textSize="16sp" />
 
                     <RadioButton
                         android:id="@+id/radioButton2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Auto" />
+                        android:button="@drawable/radiobutton_button"
+                        android:text="Auto"
+                        android:textSize="16sp" />
 
                     <RadioButton
                         android:id="@+id/radioButton3"
@@ -151,7 +156,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Horizontal" />
+                        android:button="@drawable/radiobutton_button"
+                        android:text="Horizontal"
+                        android:textSize="16sp" />
                 </RadioGroup>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -165,7 +172,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@color/transparent"
-                    android:button="@drawable/favorite_heart_button"
+                    android:button="@drawable/radiobutton_button"
                     android:enabled="true"
                     android:focusable="auto"
                     android:scaleX="5"
