--- a/app/src/main/res/layout/fragment_playlists.xml
+++ b/app/src/main/res/layout/fragment_playlists.xml
@@ -7,7 +7,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="SongsMain.Tabs.FullScreenSong">
+    tools:context="SongsMain.Tabs.Playlists">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -39,11 +39,11 @@
                 android:background="@color/transparent"
                 app:layout_collapseMode="none">
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/plusButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:backgroundTint="@color/backgrounds"
+                    android:background="@drawable/ripple_circle_white"
                     android:clickable="true"
                     android:padding="5dp"
                     android:scaleType="center"
@@ -51,12 +51,14 @@
                     app:layout_constraintEnd_toStartOf="@+id/optionsButton"
                     app:layout_constraintTop_toTopOf="@+id/optionsButton"
                     app:layout_constraintVertical_bias="1.0"
+                    app:shapeAppearance="@style/roundedImageViewRounded"
                     app:srcCompat="@drawable/add_material_default" />
 
-                <ImageView
+                <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/optionsButton"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:background="@drawable/ripple_circle_white"
                     android:clickable="true"
                     android:padding="5dp"
                     android:scaleType="center"
@@ -64,6 +66,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="1.0"
+                    app:shapeAppearance="@style/roundedImageViewRounded"
                     app:srcCompat="@drawable/options_vertical_default" />
 
                 <TextView
@@ -72,6 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="Playlists: x"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="@+id/plusButton"
                     app:layout_constraintStart_toStartOf="parent"
